some images changed

--- a/contact.html
+++ b/contact.html
@@ -345,7 +345,7 @@
         <div class="footer-bottom">
 
             <div class="container text-right">
-                Sadaka @ copyrights 2015 - by <a href="http://www.farouk.pw/fr" target="_blank">Freelance web developer</a>
+                ffpum @ copyrights 2017 - by <a href="#" target="_blank">ffpum</a>
             </div>
         </div>
         
@@ -366,7 +366,6 @@
 
         <!-- Google map  -->
         <script src="http://maps.google.com/maps/api/js?sensor=false&amp;libraries=places" type="text/javascript"></script>
-
 
         <!-- Template main javascript -->
         <script src="assets/js/main.js"></script>
